--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,28 @@
 body {
   margin: 0;
+  padding: 0;
+  border: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --background-gradient: linear-gradient(rgba(41,4,66, 0.5), rgba(160,4,149, 0.3));
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.videoTag {
+position: fixed;
+z-index: -1;
+width: 100%;
+}
+
+.content-container {
+  height: 100vh;
+  background-size: cover;
+  font-family: 'Roboto Mono', monospace;
 }
