--- a/src/components/screens/styles/contactus.css
+++ b/src/components/screens/styles/contactus.css
@@ -89,6 +89,13 @@
   height: 400px;
   border: 2px solid #fff;
   border-radius: 18px;
+  position: relative;
+  z-index: 1;
+}
+
+.sendemail-disabled {
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .form-container {
@@ -125,6 +132,17 @@
 .email-action-container {
   display: flex;
   justify-content: flex-start;
+}
+
+.not-available-function {
+  position: absolute;
+  height: fit-content;
+  background-color: yellow;
+  inset: 0;
+  margin: auto;
+  opacity: 1;
+  z-index: 2;
+  color: black;
 }
 
 @media only screen and (max-width: 400px) {
