--- a/src/components/screens/styles/team.css
+++ b/src/components/screens/styles/team.css
@@ -31,7 +31,7 @@
 .team-card {
   display: flex;
   width: 300px;
-  height: 400px;
+  min-height: 400px;
   align-items: center;
   justify-content: flex-start;
   padding-top: 20px;
@@ -64,6 +64,17 @@
   color: #000000;
   margin-bottom: 5px;
   padding: 0px 5px;
+}
+
+.team-desc {
+  text-align: center;
+  padding: 4px;
+  font-size: 14px;
+}
+
+.open-team-position {
+  /* width: 100vw; */
+  padding: 0pc 30px;
 }
 
 @media only screen and (max-width: 500px) {
