--- a/src/components/screens/styles/whatisthis.css
+++ b/src/components/screens/styles/whatisthis.css
@@ -28,7 +28,8 @@
 
 .moving-image {
   position: relative;
-  animation: mymove 10s infinite ease-in-out;
+  animation: mymove 4s infinite ease-in-out;
+  background-color: transparent;
 }
 
 .title-text {
@@ -94,16 +95,22 @@
   width: fit-content;
 }
 
-@keyframes mymove {
+/* @keyframes mymove {
   0%   {top: 0px;}
   50%  {top: 100px;}
   100% {top: 0px;}
-}
-
+} */
+/* 
 @keyframes mymove500 {
   0%   {top: 0px;}
   50%  {top: 50px;}
   100% {top: 0px;}
+} */
+
+@keyframes mymove {
+  0%   {transform:rotateY(0deg)}
+  50% {transform:rotateY(180deg)}
+  100% {transform:rotateY(0deg)}
 }
 
 @media only screen and (max-width: 500px) {
@@ -137,16 +144,11 @@
   }
 
   .moving-image {
-    animation: mymove500 10s infinite ease-in-out;
+    animation: mymove 4s infinite ease-in-out;
   }
 }
 
 @media only screen and (max-width: 900px) {
-  /* .whatisthis {
-    flex-direction: column;
-    text-align: center;
-    height: 200vh;
-  } */
 
   .left-side {
     margin-left: 0px;
@@ -174,6 +176,6 @@
   }
 
   .moving-image {
-    animation: mymove500 10s infinite ease-in-out;
+    animation: mymove 4s infinite ease-in-out;
   }
 }
