--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
 }
 
 .nav-container {
-  background-image: url('./assets/images/Background.png');
+  /* background-image: url('./assets/images/Background.png'); */
+  background-image: linear-gradient(to right, #6004bc, #10044a);;
   width: 100%;
   height: fit-content;
 }
