--- a/src/components/screens/styles/tokenomics.css
+++ b/src/components/screens/styles/tokenomics.css
@@ -16,16 +16,19 @@
   align-items: center;
   font-size: 18px;
   flex-direction: column;
-  transition: scale 0.2s;
+  /* transition: scale 0.2s; */
   height:300px;
   margin: 0px 12px;
   justify-content: center;
   width: 250px;
+  position: relative;
+  transform-style: preserve-3d;
+  box-sizing: border-box;
 }
 
-.card-content:hover {
+/* .card-content:hover {
   scale: 1.2;
-}
+} */
 
 .highlight-container{
   margin: 30px 0px;
@@ -61,4 +64,36 @@
 .card-title {
   text-align: center;
   width: 100%;
+}
+
+.front,.back {
+    /* box-sizing: border-box; */
+    height: 100%;
+    width: 100%;
+    display: flex;
+    position: absolute;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+    transition: -webkit-transform ease 500ms;
+    transition: transform ease 500ms;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.front {
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(-180deg);
+}
+
+.flipF {
+  transform: rotateY(180deg);
+}
+
+.unflipB {
+  transform: rotateY(0deg);
 }
