--- a/src/App.css
+++ b/src/App.css
@@ -30,28 +30,13 @@
   z-index: 100;
   right: 10px;
   bottom: 20px;
+  height: fit-content;
 }
 
-/* @media only screen and (min-width: 400px) {
-  .nav-container {
-    height: 120vh;
-  }
+.currency-opt-fixed-right {
+  position: fixed;
+  z-index: 100;
+  right: 10px;
+  bottom: 166px;
+  height: fit-content;
 }
-
-@media only screen and (min-width: 400px) {
-  .nav-container {
-    height: 120vh;
-  }
-}
-
-@media only screen and (min-width: 500px) {
-  .nav-container {
-    height: 160vh;
-  }
-}
-
-@media only screen and (min-width: 900px) {
-  .nav-container {
-    height: 120vh;
-  }
-} */
