--- a/src/components/screens/styles/buy-now.css
+++ b/src/components/screens/styles/buy-now.css
@@ -31,12 +31,13 @@
 .buy-now-content-container {
   display: flex;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   position: absolute;
   z-index: 2;
   top: 10%;
   width: 100%;
   text-align: center;
+  flex-flow: row wrap;
 }
 
 .buy-now-punch-line {
@@ -46,7 +47,7 @@
   font-weight: inherit;
   font-size: 1.5em;
   font-family: "Poppins", Sans-serif;
-  width: 100%;
+  align-items: center;
 }
 
 h1 {
@@ -63,10 +64,24 @@ h3 {
   font-size: 18px;
 }
 
+.marketing-img {
+  width: 500px;
+  height: 120px;
+}
+
+.buy-action-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
+}
+
 @media only screen and (max-width: 900px) {
   .buy-now-punch-line {
-    margin: 100px 10px;
-    margin-bottom: 100px;
+    margin: 60px 10px;
+    margin-top: 100px;
     font-size: 1em;
   }
 
@@ -76,5 +91,10 @@ h3 {
 
   .buy-now-container {
     height: 800px;
+  }
+
+  .marketing-img {
+    width: 300px;
+    height: 100px;
   }
 }
